--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 version = '1.0'
 
 repositories {
@@ -8,5 +8,8 @@ repositories {
 }
 
 dependencies {
+    compile 'net.sf.opencsv:opencsv:2.3'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
