--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,11 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.guava:guava:18.0'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.3'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
