--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,17 @@ sourceCompatibility = 1.8
 version = '1.0'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
+    compile group: 'jp.ac.titech.cs.se', name: 'sparesort', version:'0.2.0'
     compile 'com.google.guava:guava:18.0'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
+    compile 'com.google.code.gson:gson:1.7.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
