--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,11 @@ repositories {
 }
 
 dependencies {
-    compile group: 'jp.ac.titech.cs.se', name: 'sparesort', version:'0.2.0'
     compile 'com.google.guava:guava:18.0'
-    compile 'net.sf.opencsv:opencsv:2.3'
     compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'nz.ac.waikato.cms.weka:weka-dev:3.7.12'
     compile 'com.google.code.gson:gson:1.7.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.3'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.3'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'org.jgrapht:jgrapht-dist:0.9.1'
+    compile 'jp.ac.titech.cs.se:sparesort:0.2.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.3'
+    testCompile 'junit:junit:4.12'
 }
