--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:2.3'
     testCompile 'junit:junit:4.12'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
+}
