added bide library as internal jar to avoid installing it to local .m2

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@ subprojects {
     sourceCompatibility = 1.8
 
 	repositories {
-        mavenLocal();
 		mavenCentral()
+	}
+
+	dependencies {
+		testCompile 'junit:junit:4.12'
 	}
 }
 
