--- a/rosil-predict/build.gradle
+++ b/rosil-predict/build.gradle
@@ -8,7 +8,8 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.google.code.gson:gson:1.7.2'
     compile 'org.jgrapht:jgrapht-dist:0.9.1'
-    compile 'jp.ac.titech.cs.se:sparesort:0.2.0'
+    compile files('lib/sparesort-0.2.0.jar')
+    runtime 'ch.qos.logback:logback-classic:1.0.0'
+    compile 'org.slf4j:slf4j-api:1.6.4'
     compile 'org.apache.logging.log4j:log4j-core:2.3'
-    testCompile 'junit:junit:4.12'
 }
